@@ -1,3 +1,8 @@
+Sun Nov 29 17:31:43 EST 1998  Jeff Garzik  <jgarzik@pobox.com>
+
+	* configure.in, Makefile.am, gmodule/Makefile.am:
+	Put -DFOO stuff into Makefile.am INCLUDES.
+
 Sun Nov 29 14:17:09 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* configure.in: put debug -DFOO stuff into CPPFLAGS, not CFLAGS,
